--- a/05/PrintQueue.Tests/PrintQueue.Tests.csproj
+++ b/05/PrintQueue.Tests/PrintQueue.Tests.csproj
@@ -1,4 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
@@ -8,13 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    <ProjectReference Include="..\PrintQueue\PrintQueue.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="..\INPUT.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <PackageReference Include="TUnit" Version="0.4.74" />
   </ItemGroup>
-  
+
 </Project>
