--- a/07/BridgeRepair.Tests/BridgeRepair.Tests.csproj
+++ b/07/BridgeRepair.Tests/BridgeRepair.Tests.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
@@ -9,13 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    <ProjectReference Include="..\BridgeRepair\BridgeRepair.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="..\INPUT.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <PackageReference Include="TUnit" Version="0.4.83" />
   </ItemGroup>
 
 </Project>
